# obsidian-html

./: readme.md  setup.cfg  zzz_config_windows_dev.yaml  zzz_obsidian_html_dev.bat
obsidianhtml/: ConfigManager.py  CreateIndexFromDirStructure.py  MarkdownPage.py  __init__.py  lib.py
obsidianhtml/src/: defaults_config.yml
obsidianhtml/src/graph/: default_grapher_3d.html  graph.js  graph_full_page.html
obsidianhtml/src/html/: main_documentation.css  obsidian.js  template_documentation.html  template_no_tabs.html  template_tabs.html
obsidianhtml/src/index_from_dir_structure/: dirtree.js
